[package]
name = "synchronous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
affinity = "0.1.2"
num_cpus = "1.16.0"
num_threads = "0.1.6"
thread-control = "0.1.2"
thread-priority = "0.15.1"
crossbeam = "0.8.2"
rayon = "1.8.0"
send_wrapper = "0.6.0"
go-spawn = "0.1.2"
scoped-tls = "1.0.1"
threadpool = "1.8.1"
rusty_pool = "0.7.0"
fast-threadpool = "0.3.0"
chrono = "0.4.31"
tokio = { version = "1.35.0", features = ["full"] }
scoped_threadpool = "0.1.*"
scheduled-thread-pool = "0.2.7"
poolite = "0.7.1"
futures = { version = "0.3.29", features = ["thread-pool"] }
futures-lite = "2.1.0"
async-std = "1.12.0"
smol = "1.3.0"
anyhow = "1.0.75"
cfg-if = "1.0.0"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.0"
ipnetwork = "0.20.0"
libc = "0.2.149"
log = "0.4.20"
pnet_packet = "0.34.0"
rand = "0.8.5"
rate_limit = "0.1.1"
socket2 = { version = "0.5.4", features = ["all"] }
structopt = "0.3.26"
ticker = "0.1.1"
beef = "0.5.2"
once_cell = "1.19.0"
